# infiv

./: .gitignore  LICENSE  README.md  myst.yml  pyproject.toml  temp.py
.github/workflows/: daily_flow.yaml
configs/: score_proj_embedding.json  source.yaml
infiv/: __main__.py  build.py  md_to_json.py  type.py  utils.py
infiv/spiders/: arxiv.py  bilibili.py  bioxriv.py  zhihu.py
infiv/spiders/rsshub/: cool_paper_arxiv.py  default.py
